# BibleQnA-API

./: pyproject.toml
backend/api/: models.py  serlializers.py  urls.py  views.py
backend/backend/: urls.py
backend/backend/settings/: base.py  dev.py  production.py
